--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,11 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "convict": "^5.2.0",
+    "cors": "^2.8.5",
+    "ed25519-supercop": "^1.2.0",
+    "express": "^4.17.1",
     "grenache-grape": "^0.9.10",
     "grenache-nodejs-http": "^0.7.8",
     "grenache-nodejs-link": "^0.7.10",
     "lodash": "^4.17.15",
+    "method-override": "^3.0.0",
+    "morgan": "^1.9.1",
     "winston": "^2.4.4"
   },
   "devDependencies": {
