--- a/client/package.json
+++ b/client/package.json
@@ -1,45 +1,26 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
+  "name": "client",
+  "version": "0.0.1",
+  "description": "DHT Client",
   "main": "index.js",
-  "scripts": {
-    "lint": "eslint . --fix"
-  },
+  "scripts": { },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "convict": "^5.2.0",
-    "cors": "^2.8.5",
-    "ed25519-supercop": "^1.2.0",
-    "express": "^4.17.1",
     "grenache-grape": "^0.9.10",
     "grenache-nodejs-http": "^0.7.8",
     "grenache-nodejs-link": "^0.7.10",
     "lodash": "^4.17.15",
-    "method-override": "^3.0.0",
-    "morgan": "^1.9.1",
     "winston": "^2.4.4"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/register": "^7.6.2",
-    "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "jest": "^24.9.0",
-    "nodemon": "^1.19.4"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest"
-    }
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
